Bug 162307 - little bug on screensaver, in preview mode, tab and application key can't resume the locked window
Summary: little bug on screensaver, in preview mode, tab and application key can't res...
Status: RESOLVED FIXED
Alias: None
Product: kscreensaver
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 3.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kscreensaver bugs tracking
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-19 14:40 UTC by Ericchiu
Modified: 2010-10-24 00:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ericchiu 2008-05-19 14:40:18 UTC
Version:            (using KDE 3.5.8KDE 1.2)
Installed from:    Fedora RPMsFedora RPMs
OS:                Linux

I am very interested in linux stuff. 
Recently I found a bug on Kde screen saver.
When Entering screensaver mode 
Pressing any key on the keyboard would make the screen resume from saver.

However, When I In the screen saver Testing mode (preview)
pressing Tab key and application key (the key in near the right ctrl key)
has no response.

I have try do download the source code.

it's in the kdebase.

i found a file named scrnsaver.cpp
there is a function called grabkeyboard()

why system can't grab Tab and Application key in Testing mode?

thank you for your answering.
Comment 1 Oswald Buddenhagen 2010-10-24 00:11:09 UTC
SVN commit 1189062 by ossi:

quit testing mode on *all* keypresses

implement a single event() instead of various fooEvent()s. as it is
called earlier in the chain, it can intercept <tab>, etc.

BUG: 162307
FIXED-IN: 4.6

 M  +8 -17     scrnsave.cpp  
 M  +1 -3      scrnsave.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1189062