quit testing mode on *all* keypresses

implement a single event() instead of various fooEvent()s. as it is
called earlier in the chain, it can intercept <tab>, etc.

BUG: 162307
FIXED-IN: 4.6

svn path=/trunk/KDE/kdebase/workspace/; revision=1189062